# CopyMan

./: CHANGELOG.md  CONTRIBUTING.md  DELETE_BUTTON_SUMMARY.md  DELETE_FIX.md  DELETE_KEY_UPDATE.md  FEATURES_AND_ARCHITECTURE.md  GPU_FIX_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_FIX.md  QUICK_START.md  README.md  RENAME-VERIFICATION.md  SECURITY.md  TESTING.md  TEST_SUMMARY.md  clean.sh  install.sh  package-lock.json  package.json  reset-database.sh  run-dev.sh  run-with-xvfb.sh  tailwind.config.js  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  (+3 more)
CopyMan/: LICENSE  OPENSOURCE-CHECKLIST.md  PHASE-2-COMPLETION.md  README.md  SECURITY.md  index.html  package-lock.json  vite.config.ts
CopyMan-new/: PHASE-1-COMPLETION.md  PHASE-2-REVIEW-REQUEST.md
copyman/: .gitignore  pubspec.yaml
docs/: COPYMAN-vs-COMPETITORS.md  PHASE-2-PLAN-GROUPS-AND-SEQUENTIAL.md  PRD-clipboard-manager.md  README.md  ROADMAP-MVP-TO-v1.0.md  cider-technical-assessment.md  performance-tests.md
scripts/: publish-snap.sh  release.sh
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  state.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs
src-tauri/src/commands/: clipboard.rs  mod.rs  settings.rs  tests.rs  window.rs
src-tauri/src/db/: connection.rs  mod.rs  operations.rs  schema.rs
src-tauri/src/hotkeys/: mod.rs
src-tauri/src/paste/: mod.rs
src-tauri/src/search/: hybrid.rs  mod.rs  trie_index.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/tray/: mod.rs
src-tauri/tests/: dependencies_test.rs
(+103 files in other folders)
